--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,14 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
-      
+
     working_directory: ~/repo
 
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
-    
+
     steps:
       - checkout
 
@@ -26,7 +26,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: sbt test:compile
+      - run: sbt +test:compile
 
       - save_cache:
           paths:
@@ -37,8 +37,8 @@ jobs:
             - "project/target/streams"
             - ~/.m2
           key: v1-dependencies-{{ checksum "build.sbt" }}
-        
-      - run: sbt package
+
+      - run: sbt +package
 
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory
@@ -70,7 +70,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: sbt test:test
+      - run: sbt +test:test
 
   deploy:
     docker:
@@ -94,7 +94,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: sbt publish
+      - run: sbt +publish
 
 workflows:
   version: 2
